--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
     <header>
         <!-- Menu start here -->
         <nav class="wbs-menu container-fluid padding-0" role="navigation">
-            <ul class="left-nav padding-0 pull-left">
+            <i class="fa fa-reorder visible-xs-block pull-left"></i>
+            <ul class="left-nav padding-0 pull-left hidden-xs">
                 <li>
                   <a href="#">BEER</a>
                 </li>
@@ -43,7 +44,7 @@
               <img src="../images/bws-logo.png"/>
             </div>
             <ul class="pull-right right-nav">
-              <li>
+              <li class="hidden-xs">
                 <a href="" class="action-link">
                   <span class="welcome-class">Welcome </span>
                   <span class="login-register-class">Login </span>
@@ -64,7 +65,9 @@
         <!-- Search bar start here -->
         <div class="search-container clearfix">
           <div class="pull-left">
-              <div class="label-text">NOW BROWSING: BWS DOUBLE BAY</div>
+              <div class="label-text">
+                <span class="hidden-xs">NOW BROWSING:&nbsp;</span>BWS DOUBLE BAY
+              </div>
               <div class="view-store-submenu">
                 View all stores <i class="fa fa-caret-down"></i>
               </div>
@@ -72,7 +75,7 @@
            <div class="pull-right search-box">
               <i class="fa fa-info-circle pull-left"></i>
               <i class="fa fa-search"></i>
-              <input type="text" name="search" placeholder="Search in store products and specials"/>
+              <input class="hidden-xs" type="text" name="search" placeholder="Search in store products and specials"/>
           </div>
         </div>
        
@@ -85,38 +88,57 @@
     </div>
 
     <div class="footer container-fluid">
-        <div class="footer-label text-center">WAYS TO SHOP AT BWS</div>
+        <div class="footer-label">WAYS TO SHOP AT BWS</div>
         <ul class="footer-info row">
-          <li class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
               <i class="fa fa-shopping-cart"></i>
               <div class="info">SHOP IN-STORE</div>
               <div class="additional-info">1200 STORES</div>
           </li>
-          <li class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
               <i class="fa fa-shopping-basket"></i>
               <div class="info">SHOP ONLINE</div>
               <div class="additional-info">BWS.COM.AU</div>
           </li>
-          <li class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
               <i class="fa fa-send"></i>
               <div class="info">WITH YOUR GROCERIES</div>
               <div class="additional-info">WOOLWORTHS.COM.AU</div>
           </li>
-           <li class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
               <i class="fa fa-shopping-bag"></i>
               <div class="info">CLICK & COLLECT</div>
               <div class="additional-info">COLLECT IN STORE</div>
           </li>
         </ul>
+        <div class="visible-xs-block switch-desktop">
+            view desktop experience
+        </div>
         <div class="footer-redirections">
-            <i class="fa fa-trophy"></i>We take Responsible Service of Alcohol seriously.
-            <div class="pull-right">
-              <a href="">Contact US</a>
-              <a href="">Vendors</a>
-              <a href="">Privacy Policy</a>
-              <a href="">Partner with us</a>
-              <a href="">Conditions & Disclaimers</a>
+            <ul class="pull-right">
+              <li>
+                   <a href="">Contact US</a>
+              </li>
+              <li>
+                  <a href="">Vendors</a>
+              </li>
+              <li>
+                  <a href="">Privacy Policy</a>
+              </li>
+              <li>
+                  <a href="">Partner with us</a>
+              </li>
+              <li>
+                <a href="">Conditions & Disclaimers</a>
+              </li>
+            </ul>
+            <div class="pull-left oath">
+              <i class="fa fa-trophy hidden-xs"></i>We take Responsible Service of Alcohol seriously.
             </div>
+            <div class="warning">
+                LIQUOR ACT 2007.It is an offence to sell or supply to or to obtain liquor on behalf of a person under the age of 18
+            </div>
+
         </div>
     </div>
 
